--- a/Halloapp/pt-br.lproj/Localizable.stringsdict
+++ b/Halloapp/pt-br.lproj/Localizable.stringsdict
@@ -604,5 +604,88 @@
 			<string>Nenhum</string>
 		</dict>
 	</dict>
+	<key>profile.mutual.friends.groups</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_friends@ e %#@n_groups@ em comum</string>
+		<key>n_friends</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>%d friends</string>
+			<key>many</key>
+			<string>%d friends</string>
+			<key>one</key>
+			<string>%d amigo</string>
+			<key>other</key>
+			<string>%d amigos</string>
+			<key>two</key>
+			<string>%d friends</string>
+			<key>zero</key>
+			<string>%d friends</string>
+		</dict>
+		<key>n_groups</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringFormatSpecTypeKey</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d group</string>
+			<key>other</key>
+			<string>%d groups</string>
+		</dict>
+	</dict>
+	<key>profile.n.mutual.friends</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_friends@</string>
+		<key>n_friends</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>%d friends in common</string>
+			<key>many</key>
+			<string>%d friends in common</string>
+			<key>one</key>
+			<string>%d amigo em comum</string>
+			<key>other</key>
+			<string>%d amigos em comum</string>
+			<key>two</key>
+			<string>%d friends in common</string>
+			<key>zero</key>
+			<string>%d friends in common</string>
+		</dict>
+	</dict>
+	<key>profile.n.mutual.groups</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_groups@</string>
+		<key>n_groups</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>%d groups in common</string>
+			<key>many</key>
+			<string>%d groups in common</string>
+			<key>one</key>
+			<string>%d grupo em comum</string>
+			<key>other</key>
+			<string>%d grupos em comum</string>
+			<key>two</key>
+			<string>%d groups in common</string>
+			<key>zero</key>
+			<string>%d groups in common</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
