--- a/Notification Content Extension/de.lproj/InfoPlist.strings
+++ b/Notification Content Extension/de.lproj/InfoPlist.strings
@@ -4,3 +4,6 @@
 /* Bundle name */
 "CFBundleName" = "Notification Service Extension";
 
+/* Copyright (human-readable) */
+"NSHumanReadableCopyright" = "Copyright © 2023 HalloApp, Inc. Alle Rechte vorbehalten.";
+
