--- a/Halloapp/id.lproj/Localizable.stringsdict
+++ b/Halloapp/id.lproj/Localizable.stringsdict
@@ -375,11 +375,9 @@
 		<key>n_groups</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
-			<string>NSStringFormatSpecTypeKey</string>
+			<string>NSStringPluralRuleType</string>
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
-			<key>one</key>
-			<string>%d group</string>
 			<key>other</key>
 			<string>%d groups</string>
 		</dict>
